# mlops_hw3_ilia_zubov

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.blue.yaml  docker-compose.green.yaml  main.py  nginx.conf  pyproject.toml  settings.py  train.py
.github/workflows/: deploy.yaml  deploy.yml
