[project]
name = "hw3"
version = "0.1.0"
description = "Homework 3. Topic: Strategies of deployment of services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard,uvicorn]>=0.123.9",
    "numpy>=2.3.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.8",
    "scikit-learn>=1.7.2",
]
